# vopencl

./: CMakeLists.txt  ISSUES  requirements.txt
agent/: CMakeLists.txt
agent/src/: agent.c
common/: net.c
consumer/: CMakeLists.txt
include/: clara.h
provider/: CMakeLists.txt
